--- a/o2as_moveit_config/config/kinematics.yaml
+++ b/o2as_moveit_config/config/kinematics.yaml
@@ -13,3 +13,8 @@ c_bot:
   kinematics_solver_search_resolution: 0.005
   kinematics_solver_timeout: 0.005
   kinematics_solver_attempts: 3
+all_bots:
+  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+  kinematics_solver_search_resolution: 0.005
+  kinematics_solver_timeout: 0.005
+  kinematics_solver_attempts: 3
