--- a/o2as_moveit_config/config/ompl_planning.yaml
+++ b/o2as_moveit_config/config/ompl_planning.yaml
@@ -228,3 +228,30 @@ front_bots:
     - SPARStwokConfigDefault
   projection_evaluator: joints(a_bot_shoulder_pan_joint,a_bot_shoulder_lift_joint)
   longest_valid_segment_fraction: 0.005
+all_bots:
+  planner_configs:
+    - SBLkConfigDefault
+    - ESTkConfigDefault
+    - LBKPIECEkConfigDefault
+    - BKPIECEkConfigDefault
+    - KPIECEkConfigDefault
+    - RRTkConfigDefault
+    - RRTConnectkConfigDefault
+    - RRTstarkConfigDefault
+    - TRRTkConfigDefault
+    - PRMkConfigDefault
+    - PRMstarkConfigDefault
+    - FMTkConfigDefault
+    - BFMTkConfigDefault
+    - PDSTkConfigDefault
+    - STRIDEkConfigDefault
+    - BiTRRTkConfigDefault
+    - LBTRRTkConfigDefault
+    - BiESTkConfigDefault
+    - ProjESTkConfigDefault
+    - LazyPRMkConfigDefault
+    - LazyPRMstarkConfigDefault
+    - SPARSkConfigDefault
+    - SPARStwokConfigDefault
+  projection_evaluator: joints(a_bot_shoulder_pan_joint,a_bot_shoulder_lift_joint)
+  longest_valid_segment_fraction: 0.005
