--- a/o2as_moveit_config/config/fake_controllers.yaml
+++ b/o2as_moveit_config/config/fake_controllers.yaml
@@ -57,3 +57,14 @@ controller_list:
       - c_bot_wrist_1_joint
       - c_bot_wrist_2_joint
       - c_bot_wrist_3_joint
+initial:
+  - group: a_bot
+    pose: home_a
+  - group: b_bot
+    pose: home_b
+  - group: c_bot
+    pose: home_c
+  - group: front_bots
+    pose: home_front
+  - group: all_bots
+    pose: home_all
