Add d435 camera, fix dependency error

--- a/o2as_scene_description/CMakeLists.txt
+++ b/o2as_scene_description/CMakeLists.txt
@@ -8,7 +8,7 @@ project(o2as_scene_description)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED
-    realsense
+#    realsense2_camera
     
 )
 
