--- a/o2as_usb_relay/CMakeLists.txt
+++ b/o2as_usb_relay/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(o2as_usb_relay)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++14)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED
 roscpp
 std_msgs
 std_srvs
+message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -47,18 +48,16 @@ std_srvs
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+   FILES
+   USBHub.msg
+)
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  SetPower.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -68,11 +67,11 @@ std_srvs
 # )
 
 # # Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
+generate_messages(
+  DEPENDENCIES
 #   std_srvs
-#   std_msgs
-# )
+  std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -106,7 +105,7 @@ std_srvs
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES o2as_usb_relay
-#  CATKIN_DEPENDS other_catkin_pkg
+   CATKIN_DEPENDS message_runtime
 #  DEPENDS system_lib
 )
 
@@ -134,11 +133,12 @@ ${catkin_INCLUDE_DIRS}
 # Declare a C++ executable
 # With catkin_make all packages are built within a single CMake context
 # The recommended prefix ensures that target names across packages don't collide
-add_executable(o2as_relay_server src/o2as_relay_server.cpp)
+add_executable(o2as_relay_server
+	       src/o2as_relay_server.cpp)
 add_dependencies(o2as_relay_server 
 	${${PROJECT_NAME}_EXPORTED_TARGETS}
   	${catkin_EXPORTED_TARGETS})
-target_link_libraries(o2as_relay_server ${catkin_LIBRARIES})
+target_link_libraries(o2as_relay_server ${catkin_LIBRARIES} TUUSB++ usb)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -151,9 +151,9 @@ target_link_libraries(o2as_relay_server ${catkin_LIBRARIES})
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
+#target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
-# )
+#)
 
 #############
 ## Install ##
