--- a/o2as_moveit_config/config/joint_limits.yaml
+++ b/o2as_moveit_config/config/joint_limits.yaml
@@ -7,6 +7,36 @@ joint_limits:
     max_velocity: 3.15
     has_acceleration_limits: false
     max_acceleration: 0
+  a_bot_robotiq_85_left_finger_tip_joint:
+    has_velocity_limits: true
+    max_velocity: 100
+    has_acceleration_limits: false
+    max_acceleration: 0
+  a_bot_robotiq_85_left_inner_knuckle_joint:
+    has_velocity_limits: true
+    max_velocity: 100
+    has_acceleration_limits: false
+    max_acceleration: 0
+  a_bot_robotiq_85_left_knuckle_joint:
+    has_velocity_limits: true
+    max_velocity: 0.5
+    has_acceleration_limits: false
+    max_acceleration: 0
+  a_bot_robotiq_85_right_finger_tip_joint:
+    has_velocity_limits: true
+    max_velocity: 100
+    has_acceleration_limits: false
+    max_acceleration: 0
+  a_bot_robotiq_85_right_inner_knuckle_joint:
+    has_velocity_limits: true
+    max_velocity: 100
+    has_acceleration_limits: false
+    max_acceleration: 0
+  a_bot_robotiq_85_right_knuckle_joint:
+    has_velocity_limits: true
+    max_velocity: 100
+    has_acceleration_limits: false
+    max_acceleration: 0
   a_bot_shoulder_lift_joint:
     has_velocity_limits: true
     max_velocity: 3.15
