--- a/o2as_moveit_planner/package.xml
+++ b/o2as_moveit_planner/package.xml
@@ -30,6 +30,9 @@
   <run_depend>moveit_ros_planning_interface</run_depend>
   <run_depend>moveit_ros_planning</run_depend>
 
+  <run_depend>robotiq_msgs</run_depend>
+  <build_depend>robotiq_msgs</build_depend>
+
   <!-- <run_depend>o2as_skills</run_depend> -->
 
   <build_depend>message_generation</build_depend>
