--- a/o2as_vision/package.xml
+++ b/o2as_vision/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>o2as_skills</name>
-  <version>0.5.0</version>
-  <description>The o2as_skills package</description>
+  <name>o2as_vision</name>
+  <version>0.0.0</version>
+  <description>The o2as_vision package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -15,12 +15,17 @@
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>MIT</license>
 
+
+  <!-- Url tags are optional, but multiple are allowed, one per tag -->
+  <!-- Optional attribute type can be: website, bugtracker, or repository -->
+  <!-- Example: -->
+  <!-- <url type="website">http://wiki.ros.org/o2as_usb_relay</url> -->
+
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
 
   <build_depend>actionlib</build_depend>
-  <build_depend>o2as_moveit_planner</build_depend>
   <build_depend>tf</build_depend>
   <exec_depend>tf</exec_depend>
 
