--- a/o2as_pc2depth/package.xml
+++ b/o2as_pc2depth/package.xml
@@ -57,6 +57,9 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 
+  <build_depend>o2as_msgs</build_depend>
+  <exec_depend>o2as_msgs</exec_depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
