--- a/o2as_skills/package.xml
+++ b/o2as_skills/package.xml
@@ -26,6 +26,8 @@
 
   <build_depend>std_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
+  <build_depend>control_msgs</build_depend>
+  <build_depend>robotiq_msgs</build_depend>
   <exec_depend>message_generation</exec_depend>
 
   <exec_depend>moveit_core</exec_depend>
