--- a/o2as_vision/package.xml
+++ b/o2as_vision/package.xml
@@ -33,10 +33,13 @@
   <build_depend>std_srvs</build_depend>
   <exec_depend>message_generation</exec_depend>
 
-  <exec_depend>moveit_core</exec_depend>
-  <exec_depend>moveit_commander</exec_depend>
-  <exec_depend>moveit_ros_planning_interface</exec_depend>
-  <exec_depend>moveit_ros_planning</exec_depend>
+  <build_depend>phoxi_camera</build_depend>
+  <exec_depend>phoxi_camera</exec_depend>
+
+  <!-- What is this for? -->
+  <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>phoxi_camera</build_export_depend>  
+  <build_export_depend>rospy</build_export_depend>
   
   <!-- The export tag contains other, unspecified, tags -->
   <export>
@@ -44,9 +47,3 @@
 
   </export>
 </package>
-
-  <build_depend>phoxi_camera</build_depend>
-  <build_export_depend>std_msgs</build_export_depend>
-  <build_export_depend>phoxi_camera</build_export_depend>
-  <exec_depend>phoxi_camera</exec_depend>
-  <build_export_depend>rospy</build_export_depend>
