--- a/o2as_examples/package.xml
+++ b/o2as_examples/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>o2as_moveit_planner</name>
+  <name>o2as_examples</name>
   <version>0.0.0</version>
-  <description>The o2as_moveit_planner package</description>
+  <description>The o2as_examples package</description>
 
   <maintainer email="f.drigalski@sinicx.com">Felix von Drigalski</maintainer>
 
