Add materials for AR marker in Gazebo

--- a/o2as_gazebo/package.xml
+++ b/o2as_gazebo/package.xml
@@ -24,7 +24,7 @@
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>controller_manager</run_depend>
 
-
   <export>
+    <gazebo_ros gazebo_media_path="${prefix}" />
   </export>
 </package>
