--- a/o2as_msgs/CMakeLists.txt
+++ b/o2as_msgs/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 # Declare the message files to be built
-add_message_files(DIRECTORY msg)
+# add_message_files(DIRECTORY msg)
 
 add_service_files(DIRECTORY srv)
 
