--- a/o2as_examples/CMakeLists.txt
+++ b/o2as_examples/CMakeLists.txt
@@ -40,9 +40,9 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
-add_service_files(
-  DIRECTORY srv
-)
+# add_service_files(
+#   DIRECTORY srv
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -52,11 +52,11 @@ add_service_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES
-  std_msgs  # Or other packages containing msgs
-  geometry_msgs
-)
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs  # Or other packages containing msgs
+#   geometry_msgs
+# )
 
 ###################################
 ## catkin specific configuration ##
