Cleanup files in o2as_realsense_camera package

--- a/o2as_realsense_camera/CMakeLists.txt
+++ b/o2as_realsense_camera/CMakeLists.txt
@@ -12,7 +12,7 @@ add_compile_options(-std=gnu++11 -O2 -fopenmp)
 find_package(catkin REQUIRED COMPONENTS 
     roscpp 
     cv_bridge
-    message_generation #genmsg
+    message_generation
 )
 
 # OpenCV
@@ -41,11 +41,9 @@ if(NOT realsense2_FOUND)
     message(FATAL_ERROR "\n\n Intel RealSense SDK 2.0 is missing, please install it from https://github.com/IntelRealSense/librealsense/releases\n\n")
 endif()
 
-
 # Service
 add_service_files(FILES 
     Connect.srv
-    GetFrame.srv
     SaveFrameForCadMatching.srv
 )
 generate_messages(DEPENDENCIES)
@@ -62,31 +60,25 @@ catkin_package(
 ## Build ##
 ###########
 
-# include
 include_directories(
-    includerealsense_camera_multi_node
-    ${catkirealsense_camera_multi_node
-    #${Openrealsense_camera_multi_node
+    include
+    ${catkin_INCLUDE_DIRS}
 )
 
-# lib
-set(cad_LIBRARIES
-    ${PROJECT_SOURCE_DIR}/lib/libcommon.so
-    #${PROJECT_SOURCE_DIR}/lib/libcad.so
-    ${PROJECT_SOURCE_DIR}/lib/libcad_free_avx.so
+set(${PROJECT_NAME}_SOURCES
+    src/util_cam.cpp
+    src/o2as_realsense_camera.cpp
 )
+add_executable(${PROJECT_NAME}_node ${${PROJECT_NAME}_SOURCES} src/o2as_realsense_camera_node.cpp)
+add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(${PROJECT_NAME}_node realsense2 ${OpenCV_LIBRARIES} ${catkin_LIBRARIES})
 
-# util_cam
-add_library(util_cam src/util_cam.cpp)realsense_camera_multi_node
-add_dependencies(util_cam ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(util_cam realsense2 ${OpenCV_LIBRARIES} ${catkin_LIBRARIES})
+#############
+## Install ##
+#############
 
-# realsense_camera_node
-add_executable(realsense_camera_node src/realsense_camera_node.cpp)
-add_dependencies(realsense_camera_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(realsense_camera_node util_cam realsense2 ${OpenCV_LIBRARIES} ${catkin_LIBRARIES})
-
-# camera_manager
-add_executable(camera_manager src/camera_manager.cpp)
-add_dependencies(camera_manager ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(camera_manager realsense2 ${OpenCV_LIBRARIES} ${catkin_LIBRARIES})
+#install(DIRECTORY include/${PROJECT_NAME}/
+#    DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+#    FILES_MATCHING PATTERN "*.h"
+#    PATTERN ".svn" EXCLUDE
+#)
