Alternative pose visualization with rviz_visual_tools

--- a/o2as_skills/CMakeLists.txt
+++ b/o2as_skills/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(catkin REQUIRED
 	moveit_commander
 	moveit_ros_planning_interface
 	moveit_ros_planning
+	rviz_visual_tools
 	tf
 )
 
