--- a/o2as_vision/CMakeLists.txt
+++ b/o2as_vision/CMakeLists.txt
@@ -33,6 +33,7 @@ catkin_python_setup()
 # Generate services in the 'srv' folder
 add_service_files(
   FILES
+  FindObject.srv
   FindObjects.srv
 )
 
