--- a/o2as_vision/CMakeLists.txt
+++ b/o2as_vision/CMakeLists.txt
@@ -13,84 +13,21 @@ find_package(catkin REQUIRED
   geometry_msgs
   geometric_shapes
   o2as_cad_matching_msgs
-  message_generation
 )
 
 # find_package(Boost REQUIRED COMPONENTS system)
 catkin_python_setup()
-
-################################################
-## Declare ROS messages, services and actions ##
-################################################
-
-## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
-
-# Generate services in the 'srv' folder
-add_service_files(
-  FILES
-  FindObject.srv
-  FindObjects.srv
-)
-
-## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
-
-# Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES geometry_msgs
-)
-
-################################################
-## Declare ROS dynamic reconfigure parameters ##
-################################################
-
-## Generate dynamic reconfigure parameters in the 'cfg' folder
-# generate_dynamic_reconfigure_options(
-#   cfg/DynReconf1.cfg
-#   cfg/DynReconf2.cfg
-# )
 
 ###################################
 ## catkin specific configuration ##
 ###################################
 
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES o2as_vision
-#  CATKIN_DEPENDS other_catkin_pkg
-#  DEPENDS system_lib
 )
 
 ###########
 ## Build ##
 ###########
-
-include_directories(
-# include
-  ${catkin_INCLUDE_DIRS}
-)
-
-set(${PROJECT_NAME}_SOURCES
-    src/o2as_realsense_camera_interface.cpp
-    src/o2as_cad_matching_interface.cpp 
-    src/o2as_planning_scene_interface.cpp
-    src/o2as_vision_group_interface.cpp
-    src/o2as_vision.cpp
-)
-add_executable(${PROJECT_NAME}_node ${${PROJECT_NAME}_SOURCES} src/o2as_vision_node.cpp)
-add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(${PROJECT_NAME}_node
-  ${catkin_LIBRARIES}
-)
 
 catkin_install_python(PROGRAMS scripts/phoxi_camera_actual_example.py
                       DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
@@ -104,16 +41,16 @@ catkin_install_python(PROGRAMS scripts/phoxi_camera_actual_example.py
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-install(
-  PROGRAMS
-    scripts/cad_matching_interface.py
-    scripts/planning_scene_interface.py
-    scripts/realsense_camera_interface.py
-    scripts/vision_group_interface.py
-    scripts/vision_group.py
-  DESTINATION
-    ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
+#install(
+#  PROGRAMS
+#    scripts/cad_matching_interface.py
+#    scripts/planning_scene_interface.py
+#    scripts/realsense_camera_interface.py
+#    scripts/vision_group_interface.py
+#    scripts/vision_group.py
+#  DESTINATION
+#    ${CATKIN_PACKAGE_BIN_DESTINATION}
+#)
 
 ## Mark executables and/or libraries for installation
 # install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
