Add test parts named 00_holder to o2as_parts_description

--- a/o2as_parts_description/config/assembly_parts_list.yaml
+++ b/o2as_parts_description/config/assembly_parts_list.yaml
@@ -1,4 +1,9 @@
 parts_list:
+  - id: 0
+    name: holder
+    type: 00_holder
+    cad: 00_holder.stl
+    description: Holder
   - id: 4
     name: motor
     type: 04_37D-GEARMOTOR-50-70
