--- a/o2as_parts_description/config/assembly_parts_list.yaml
+++ b/o2as_parts_description/config/assembly_parts_list.yaml
@@ -4,6 +4,21 @@ parts_list:
     type: 00_holder
     cad: 00_holder.stl
     description: Holder
+  - id: 1
+    name: base
+    type: 01-BASE
+    cad: 01-BASE.stl
+    description: Base Panel
+  - id: 2
+    name: panel
+    type: 02-PANEL
+    cad: 02-PANEL.stl
+    description: Output shaft fixing plate
+  - id: 3
+    name: panel2
+    type: 03-PANEL2
+    cad: 03-PANEL2.stl
+    description: Motor fixing plate
   - id: 4
     name: motor
     type: 04_37D-GEARMOTOR-50-70
