--- a/o2as_parts_description/config/assembly_parts_list_all.yaml
+++ b/o2as_parts_description/config/assembly_parts_list_all.yaml
@@ -1,5 +1,9 @@
 parts_list:
-# - 04_37D-GEARMOTOR-50-70          # Geared motor (Gear ratio 1:70)
+  - 00_holder                       # Test parts
+  - 01-BASE                         # Base Panel
+  - 02-PANEL                        # Output shaft fixing plate
+  - 03-PANEL2                       # Motor fixing plate
+  - 04_37D-GEARMOTOR-50-70          # Geared motor (Gear ratio 1:70)
   - 05_MBRFA30-2-P6                 # Pulley for Round Belt (4mm) - Setscrew P.D. 30mm
   - 06_MBT4-400                     # Polyurethane round belt （welded joint product) P.D. 4mm L=400mm
   - 07_SBARB6200ZZ-30               # Bearings with Housings (Double Bearings)
