--- a/o2as_realsense_camera/package.xml
+++ b/o2as_realsense_camera/package.xml
@@ -12,15 +12,17 @@
 	<buildtool_depend>catkin</buildtool_depend>
 
 	<build_depend>roscpp</build_depend>
-	<build_depend>geometry_msgs</build_depend>
-	<build_depend>cv_bridge</build_depend>
-	<build_depend version_gte="3.3.0">opencv3</build_depend>
-	<build_depend>librealsense2</build_depend>
-
 	<run_depend>roscpp</run_depend>
-	<run_depend>cv_bridge</run_depend>
-	<run_depend version_gte="3.3.0">opencv3</run_depend>
+	<build_depend>dynamic_reconfigure</build_depend>
+	<run_depend>dynamic_reconfigure</run_depend>
+
+	<build_depend>geometry_msgs</build_depend>
+	<build_depend>librealsense2</build_depend>
 	<run_depend>librealsense2</run_depend>
+	<build_depend version_gte="3.3.0">opencv3</build_depend>
+	<run_depend version_gte="3.3.0">opencv3</run_depend>
+	<build_depend>cv_bridge</build_depend>
+	<run_depend>cv_bridge</run_depend>
 
 	<export>
 	</export>
