Add a script to automatically take samples for handeye calibration

--- a/o2as_easy_handeye/CMakeLists.txt
+++ b/o2as_easy_handeye/CMakeLists.txt
@@ -146,6 +146,9 @@ include_directories(
 #   ${catkin_LIBRARIES}
 # )
 
+catkin_install_python(PROGRAMS scripts/run_handeye_calibration.py
+                      DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
 #############
 ## Install ##
 #############
