--- a/o2as_examples/package.xml
+++ b/o2as_examples/package.xml
@@ -30,6 +30,9 @@
   <run_depend>moveit_ros_planning_interface</run_depend>
   <run_depend>moveit_ros_planning</run_depend>
 
+  <build_depend>o2as_vision</build_depend>
+  <run_depend>o2as_vision</run_depend>
+
   <run_depend>robotiq_msgs</run_depend>
   <build_depend>robotiq_msgs</build_depend>
 
