--- a/o2as_fastening_tools/CMakeLists.txt
+++ b/o2as_fastening_tools/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Set minimum required version of cmake, project name and compile options
 ################################################################################
 cmake_minimum_required(VERSION 2.8.3)
-project(o2as_fastener_gripper)
+project(o2as_fastening_tools)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++11)
