--- a/aist_kitting/aist_kitting/package.xml
+++ b/aist_kitting/aist_kitting/package.xml
@@ -61,6 +61,7 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>cv2</build_depend>
   <build_depend>skimage</build_depend>
+  <build_depend>o2as_usb_relay</build_depend>
   <exec_depend>std_srvs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
@@ -68,6 +69,7 @@
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>cv2</exec_depend>
   <exec_depend>skimage</exec_depend>
+  <exec_depend>o2as_usb_relay</exec_depend>
 
   <build_depend>moveit_commander</build_depend>  
   <exec_depend>moveit_commander</exec_depend>
