Fix a bias in the calibration parameter in /a_phoxi_m_camera/camera_info in Gazebo

--- a/o2as_easy_handeye/CMakeLists.txt
+++ b/o2as_easy_handeye/CMakeLists.txt
@@ -147,6 +147,7 @@ include_directories(
 # )
 
 catkin_install_python(PROGRAMS scripts/run_handeye_calibration.py
+                               scripts/convert_phoxi_camera_info_gazebo.py
                       DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 #############
