--- a/o2as_skills/package.xml
+++ b/o2as_skills/package.xml
@@ -19,6 +19,8 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
 
+  <build_depend>ur_modern_driver</build_depend>
+
   <build_depend>actionlib</build_depend>
   <build_depend>tf</build_depend>
   <exec_depend>tf</exec_depend>
@@ -30,7 +32,6 @@
   <build_depend>robotiq_msgs</build_depend>
   <exec_depend>message_generation</exec_depend>
   
-
   <exec_depend>moveit_core</exec_depend>
   <exec_depend>moveit_commander</exec_depend>
   <exec_depend>moveit_ros_planning_interface</exec_depend>
