Add first demon-simulation pick-and-place.

--- a/o2as_routines/package.xml
+++ b/o2as_routines/package.xml
@@ -35,6 +35,9 @@
   <run_depend>o2as_msgs</run_depend>
   <build_depend>o2as_msgs</build_depend>
 
+  <run_depend>o2as_usb_relay</run_depend>
+  <build_depend>o2as_usb_relay</build_depend>
+
   <!-- TODO: Move the definitions to o2as_msgs -->
   <run_depend>o2as_skills</run_depend>
   <build_depend>o2as_skills</build_depend>
