--- a/o2as_examples/package.xml
+++ b/o2as_examples/package.xml
@@ -36,6 +36,12 @@
   <run_depend>robotiq_msgs</run_depend>
   <build_depend>robotiq_msgs</build_depend>
 
+  <build_depend>o2as_skills</build_depend>
+  <run_depend>o2as_skills</run_depend>
+
+  <build_depend>o2as_routines</build_depend>
+  <run_depend>o2as_routines</run_depend>
+
   <!-- <run_depend>o2as_skills</run_depend> -->
 
   <build_depend>message_generation</build_depend>
