--- a/o2as_realsense_camera/package.xml
+++ b/o2as_realsense_camera/package.xml
@@ -8,6 +8,7 @@
 
 	<buildtool_depend>catkin</buildtool_depend>
 	<depend>roscpp</depend>
+	<depend>dynamic_reconfigure</depend>
 	<depend>std_srvs</depend>
 	<depend>pcl</depend>
 	<depend>pcl_conversions</depend>
