test the tool driver and fix bug

--- a/o2as_msgs/CMakeLists.txt
+++ b/o2as_msgs/CMakeLists.txt
@@ -18,7 +18,10 @@ add_message_files(DIRECTORY msg)
 add_service_files(DIRECTORY srv)
 
 # Generate actions in the 'action' folder
-add_action_files( DIRECTORY action )
+add_action_files( 
+  DIRECTORY action 
+  FILES ToolsCommand.action)
+
 
 # # Generate added messages and services with any dependencies listed here
 
