--- a/o2as_fastening_tools/package.xml
+++ b/o2as_fastening_tools/package.xml
@@ -19,5 +19,7 @@
   <build_depend>actionlib_msgs</build_depend>
   <exec_depend>actionlib</exec_depend>
   <exec_depend>actionlib_msgs</exec_depend>
+  <build_depend>o2as_msgs</build_depend>
+  <exec_depend>o2as_msgs</exec_depend>
 
 </package>
