WIP: integrate graspability estimation for test.

--- a/o2as_routines/config/kitting_item_list.yaml
+++ b/o2as_routines/config/kitting_item_list.yaml
@@ -1,9 +1,9 @@
-set_1: {part_11: 11_MBRAC60-2-10, part_13: 13_MBGA30-2, part_16: 16_SPWF6, part_17: 17_SCB4-10,
-  part_18: 18_SCB3-10, part_4: 04_37D-GEARMOTOR-50-70, part_6: 06_MBT4-400, part_8: 08_KZAF1075NA4WA55GA20AA0,
-  part_9: 09_EDCS10}
+set_1: {part_11: 11_MBRAC60-2-10, part_13: 13_MBGA30-2, part_14: 14_BGPSL6-9-L30-F8,
+  part_17: 17_SCB4-10, part_4: 04_37D-GEARMOTOR-50-70, part_5: 05_MBRFA30-2-P6, part_7: 07_SBARB6200ZZ_30,
+  part_8: 08_KZAF1075NA4WA55GA20AA0, part_9: 09_EDCS10}
 set_2: {part_11: 11_MBRAC60-2-10, part_12: 12_CLBUS6-9-9.5, part_13: 13_MBGA30-2,
-  part_16: 16_SPWF6, part_17: 17_SCB4-10, part_18: 18_SCB3-10, part_4: 04_37D-GEARMOTOR-50-70,
-  part_6: 06_MBT4-400, part_8: 08_KZAF1075NA4WA55GA20AA0}
-set_3: {part_11: 11_MBRAC60-2-10, part_13: 13_MBGA30-2, part_16: 16_SPWF6, part_17: 17_SCB4-10,
-  part_18: 18_SCB3-10, part_4: 04_37D-GEARMOTOR-50-70, part_6: 06_MBT4-400, part_8: 08_KZAF1075NA4WA55GA20AA0,
-  part_9: 09_EDCS10}
+  part_14: 14_BGPSL6-9-L30-F8, part_17: 17_SCB4-10, part_4: 04_37D-GEARMOTOR-50-70,
+  part_5: 05_MBRFA30-2-P6, part_7: 07_SBARB6200ZZ_30, part_8: 08_KZAF1075NA4WA55GA20AA0}
+set_3: {part_11: 11_MBRAC60-2-10, part_13: 13_MBGA30-2, part_14: 14_BGPSL6-9-L30-F8,
+  part_17: 17_SCB4-10, part_4: 04_37D-GEARMOTOR-50-70, part_5: 05_MBRFA30-2-P6, part_7: 07_SBARB6200ZZ_30,
+  part_8: 08_KZAF1075NA4WA55GA20AA0, part_9: 09_EDCS10}
