--- a/o2as_routines/CMakeLists.txt
+++ b/o2as_routines/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(catkin REQUIRED COMPONENTS
   moveit_ros_planning
   moveit_ros_planning_interface
   robotiq_msgs
+  ur_modern_driver
 )
 
 ## System dependencies are found with CMake's conventions
